--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,10 +1,32 @@
+:root {
+    --heading-font: 'Playfair Display', sans-serif;
+    --default-font: 'Poppins', sans-serif;
+    --main-color: #227A8D;
+    --background-color: #EEFFFF;
+}
 
-
+.hero {
+    background-color: var(--background-color);
+    text-align: center;
+    padding: 100px 0;
+    line-height: 2;
+}
 
 h1 {
-    font-family: 'Playfair Display';
+    font-family: var(--heading-font);
+    font-size: 70px;
+}
+
+h2 {
+    font-family: var(--default-font);
 }
 
 p {
-    font-family: 'Poppins';
+    font-family: var(--default-font);
+}
+
+.button {
+    background-color: var(--main-color);
+    color: white;
+    padding: 13px 30px;
 }
