--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,6 +21,11 @@ h2 {
     font-family: var(--default-font);
 }
 
+h3 {
+    font-family: var(--heading-font);
+    font-size:40px;
+}
+
 p {
     font-family: var(--default-font);
 }
@@ -29,4 +34,28 @@ p {
     background-color: var(--main-color);
     color: white;
     padding: 13px 30px;
+}
+
+.project {
+    text-align: center;
+}
+
+.paragraph {
+    max-width: 700px;
+    margin: 0 auto;
+    font-family: var(--default-font);
+    
+}
+
+.button-outline {
+    border: 1px solid var(--main-color);
+    color:var(--main-color);
+    padding: 13px 30px;
+}
+
+@media (max-width: 900px) {
+    h1 {
+        font-size: 44px;
+    }
+
 }
