--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,6 +5,10 @@
     --background-color: #EEFFFF;
 }
 
+body {
+    font-family: var(--default-font);
+  }
+
 .hero {
     background-color: var(--background-color);
     text-align: center;
@@ -17,17 +21,15 @@ h1 {
     font-size: 70px;
 }
 
-h2 {
-    font-family: var(--default-font);
-}
+
 
 h3 {
     font-family: var(--heading-font);
-    font-size:40px;
+    font-size:60px;
 }
 
 p {
-    font-family: var(--default-font);
+    font-size: 20px;
 }
 
 .button {
@@ -38,12 +40,13 @@ p {
 
 .project {
     text-align: center;
+    margin-bottom: 150px;
 }
 
 .paragraph {
     max-width: 700px;
     margin: 0 auto;
-    font-family: var(--default-font);
+ 
     
 }
 
@@ -54,8 +57,8 @@ p {
 }
 
 @media (max-width: 900px) {
-    h1 {
+    h1, h3 {
         font-size: 44px;
     }
-
 }
+
