--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -54,16 +54,21 @@ p {
     padding: 13px 30px;
 }
 
-.about-section {
+.section {
     margin-top: 100px;
 }
 
-.hero-about h1 {
+.content h1 {
     font-size: 48px;
     font-family: var(--heading-font);
 }
 
-.hero-about p {
+.content h3 {
+    font-size: 36px;
+    font-family: var(--default-font);
+}
+
+.content p {
     font-size: 18px;
     text-align:justify;
     margin-top: 20px;
@@ -74,6 +79,14 @@ p {
     border-radius: 40px;
     padding: 20px;
     justify-content: center;
+}
+
+.description {
+    font-size: 18px;
+}
+
+.img-link:hover {
+    opacity: 0.8;
 }
 
 
