--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -100,6 +100,10 @@ p {
     font-size: 28px;
 }
 
+.contact-hero {
+    margin-top: 150px;
+}
+
 footer .contact-box {
     background-color: var(--background-color);
     padding: 30px;
